--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="./sam2.jpg" rel="icon" type="image/jpg">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Samuel Dias</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
